Implemented new enums & plugins into registry